# git

./: .gitignore  .mailmap  .travis.yml  .vsts-ci.yml  CMakeLists.txt  GIT-VERSION-GEN  Makefile  README.md  abspath.c  add-interactive.c  add-interactive.h  add-patch.c  advice.c  advice.h  annotate.txt  apply.c  apply.h  archive-tar.c  archive-zip.c  archive.c  archive.h  azure-pipelines.yml  backup-log.c  backup-log.h  bisect.c  bisect.h  blame.c  blame.h  blame.txt  blob.c  blob.h  bloom.c  bloom.h  branch.c  branch.h  builtin.h  bulk-checkin.c  bundle.c  cache-tree.c  cache-tree.h  (+235 more)
.github/workflows/: main.yml
.sparse/: base.deps  windows.deps
Documentation/: .gitignore  Makefile  MyFirstContribution  MyFirstContribution.txt  MyFirstObjectWalk.txt  SubmittingPatches  advice-config.txt  blame-options.txt  cmd-list.perl  config.txt  fetch-options.txt  git-add.txt  git-apply.txt  git-archive.txt  git-backup-log.txt  git-branch-diff.txt  git-branch.txt  git-check-ignore.txt  git-checkout.txt  git-cherry-pick.txt  git-clone.txt  git-commit-graph.txt  git-commit-tree.txt  git-commit.txt  git-config.txt  git-credential-store.txt  git-diff.txt  git-for-each-ref.txt  git-for-each-repo.txt  git-grep.txt  git-http-fetch.txt  git-ignore.txt  git-index-helper.txt  git-init.txt  git-job-runner.txt  git-log.txt  git-maintenance.txt  git-merge-base.txt  git-merge.txt  git-multi-pack-index.txt  (+29 more)
Documentation/RelNotes/: 2.13.0.txt  2.24.0.txt
Documentation/config/: advice.txt  branch.txt  clone.txt  core.txt  fetch.txt  format.txt  gc.txt  http.txt  index.txt  job.txt  log.txt  maintenance.txt  mergetool.txt  pack.txt  pull.txt  push.txt  remote.txt  sparse.txt  stash.txt  status.txt  submodule.txt  user.txt
Documentation/howto/: rebase-from-internal-branch.txt
Documentation/technical/: api-parse-options.txt  api-trace2.txt  change-graph.txt  commit-graph-format.txt  commit-graph.txt  evolve.txt  pack-format.txt  packfile-uri.txt  protocol-capabilities.txt  protocol-v2.txt  reftable.txt
builtin/: .checkout.c.swp  add--helper.c  add.c  am.c  archive.c  backup-log.c  bisect--helper.c  blame.c  branch-diff.c  branch.c  bundle.c  cat-file.c  change.c  check-ignore.c  check-ref-format.c  checkout-index.c  checkout.c  clean.c  clone.c  commit-graph.c  commit.c  config.c  count-objects.c  describe.c  diff-files.c  diff-index.c  diff-tree.c  diff.c  difftool.c  fast-export.c  fetch-pack.c  fetch.c  fmt-merge-msg.c  for-each-ref.c  fsck.c  gc.c  grep.c  index-pack.c  init-db.c  job-runner.c  (+45 more)
ci/: install-dependencies.sh  lib-travisci.sh  lib.sh  run-build-and-tests.sh  run-build.sh  run-docker.sh
compat/: mingw.c  mingw.h
compat/poll/: poll.c
compat/win32/: ancestry.c  path-utils.c  path-utils.h  trace2_win32_process_info.c
contrib/: coverage-diff.sh
contrib/buildsystems/: CMakeLists.txt
contrib/coccinelle/: object_id.cocci  packed_git.cocci
contrib/completion/: git-completion.bash  git-completion.zsh  git-prompt.sh
contrib/emacs/: git.el
contrib/hooks/: update-paranoid
contrib/subtree/: git-subtree.sh  git-subtree.txt
git-gui/: Makefile
git-gui/lib/: index.tcl
gitk-git/: gitk
lib/: blame.tcl  choose_repository.tcl  chord.tcl  colored.tcl  commit.tcl  index.tcl  status_bar.tcl
mergetools/: meld
perl/: Git.pm
plan9/: wrap.c
po/: bg.po  ca.po  de.po  el.po  es.po  fr.po  git.pot  it.po  ko.po  ru.po  sv.po  tr.po  vi.po  zh_CN.po  zh_TW.po
po/glossary/: de.po
ppc/: sha1.c  sha1.h
refs/: debug.c  files-backend.c  packed-backend.c  refs-internal.h  reftable-backend.c
reftable/: BUILD  README.md  VERSION  reader.c  record.c  reftable.h  stack.c  system.h  update.sh  writer.c
t/: .gitattributes  README  annotate-tests.sh  gitconfig-for-test  gitweb-lib.sh  lib-gettext.sh  lib-gpg.sh  lib-httpd.sh  lib-rebase.sh  lib-submodule-update.sh  t0001-init.sh  t0006-date.sh  t0014-alias.sh  t0018-advice.sh  t0028-working-tree-encoding.sh  t0031-reftable.sh  t0033-debug-refs.sh  t0040-parse-options.sh  t0061-run-command.sh  t0064-sha1-array.sh  t0067-parse_pathspec_file.sh  t0070-fundamental.sh  t0091-quote.sh  t0200-gettext-basic.sh  t0205-gettext-poison.sh  t0210-trace2-normal.sh  t0211-trace2-perf.sh  t0212-trace2-event.sh  t0300-credentials.sh  t0302-credential-store.sh  t0400-external-odb.sh  t0410-partial-clone.sh  t0410-transfer-e-odb.sh  t0420-transfer-http-e-odb.sh  t1006-cat-file.sh  t1010-mktree.sh  t1011-read-tree-sparse-checkout.sh  t1050-large.sh  t1091-sparse-checkout-builtin.sh  t1300-config.sh  (+163 more)
t/helper/: test-advise.c  test-config.c  test-crontab.c  test-date.c  test-delta.c  test-oidmap.c  test-parse-options.c  test-parse-pathspec-file.c  test-path-utils.c  test-prio-queue.c  test-quote.c  test-reach.c  test-read-cache.c  test-read-graph.c  test-sha1-array.c  test-tool.c  test-tool.h  test-trace.c  test-trace2.c
t/lib-httpd/: apache-e-odb.conf  list.sh  upload.sh
t/perf/: p3000-stash.sh  perf-lib.sh
t/t0212/: parse_events.perl
t/t4018/: julia-function  julia-indented-function  julia-inline-function  julia-macro  julia-mutable-struct  julia-struct
t/t7519/: fsmonitor-watchman
t/trace_schema_validator/: .gitignore  Makefile  README  event_schema.json  list_schema.json  strict_list_schema.json  strict_schema.json  trace_schema_validator.go
templates/: Makefile
trace2/: tr2_cfg.c  tr2_cfg.h  tr2_dst.c  tr2_dst.h  tr2_sid.c  tr2_sysenv.c  tr2_tbuf.c  tr2_tbuf.h  tr2_tgt.h  tr2_tgt_event.c  tr2_tgt_normal.c  tr2_tgt_perf.c  tr2_tls.c  tr2_tls.h  tr2_verb.c  tr2_verb.h
